--- a/curve_editor/ui/src/index.html
+++ b/curve_editor/ui/src/index.html
@@ -27,7 +27,7 @@
 </head>
 <body style="margin:0;height:100%;">
     <div id="root">
-        <div class="loading">読み込み中...</div>
+        <div class="loading">Loading...</div>
     </div>
     <script src="js/bundle.js"></script>
 </body>
